fixed input id FINAL

--- a/static/index.html
+++ b/static/index.html
@@ -113,12 +113,14 @@
   <p>Paste a product link and analyze it.</p>
 
   <input
-    id="link"
-    type="text"
-    placeholder="Paste product link here"
-  >
+    
+<input
+id="productLink"
+type="text"
+placeholder="Paste product link here"
+>
 
-<button id="analyzeBtn" onclick="analyze()">Analyze</button>
+<button id="analyzeBtn" onclick="analyzeProduct()">Analyze</button>
 
 <div id="loading" style="display:none;">
   <div class="spinner"></div>
