fix button click binding

--- a/static/index.html
+++ b/static/index.html
@@ -120,7 +120,7 @@ type="text"
 placeholder="Paste product link here"
 >
 
-<button id="analyzeBtn" onclick="analyzeProduct()">Analyze</button>
+<button id="analyzeBtn" onclick="analyze()">Analyze</button>
 
 <div id="loading" style="display:none;">
   <div class="spinner"></div>
