--- a/static/index.html
+++ b/static/index.html
@@ -144,38 +144,28 @@ placeholder="Paste product link here"
 
 <script>
 
-
 let isRunning = false;
-
-
 
 function setLoading(state) {
 
     const btn = document.getElementById("analyzeBtn");
-
     const loading = document.getElementById("loading");
 
     if (state) {
 
         btn.disabled = true;
-
         btn.innerText = "Working...";
-
         loading.style.display = "flex";
 
     } else {
 
         btn.disabled = false;
-
         btn.innerText = "Analyze";
-
         loading.style.display = "none";
 
     }
 
 }
-
-
 
 async function analyze() {
 
@@ -191,9 +181,7 @@ async function analyze() {
     if (!link) {
 
         alert("Paste link first");
-
         isRunning = false;
-
         return;
 
     }
@@ -204,10 +192,6 @@ async function analyze() {
 
     try {
 
-        const controller = new AbortController();
-
-        const timeout = setTimeout(() => controller.abort(), 60000);
-
         const res = await fetch("/analyze", {
 
             method: "POST",
@@ -216,15 +200,12 @@ async function analyze() {
                 "Content-Type": "application/json"
             },
 
-            body: JSON.stringify({ link }),
-
-            signal: controller.signal
+            body: JSON.stringify({ link })
 
         });
 
-        clearTimeout(timeout);
-
-        if (!res.ok) throw new Error("Server error");
+        if (!res.ok)
+            throw new Error("Server error");
 
         const data = await res.json();
 
@@ -234,62 +215,26 @@ async function analyze() {
 
     catch (err) {
 
-        if (err.name === "AbortError")
-            result.innerText = "❌ Timeout";
-        else
-            result.innerText = "❌ Network error";
+        result.innerText = "❌ Error";
 
     }
 
     finally {
 
         setLoading(false);
-
         isRunning = false;
 
     }
 
 }
-
-
-    showResult(data);
-
-}
-
-    }
-
-    catch (err) {
-
-        if (err.name === "AbortError")
-
-            result.innerText = "❌ Timeout";
-
-        else
-
-            result.innerText = "❌ Network error";
-
-    }
-
-    finally {
-
-        setLoading(false);
-
-        isRunning = false;
-
-    }
-
-}
-
-
 
 function showResult(data) {
 
+    const result = document.getElementById("result");
+
     if (!data || !data.analysis) {
 
-        document.getElementById("result").innerText =
-
-            "❌ Invalid analysis";
-
+        result.innerText = "❌ Invalid analysis";
         return;
 
     }
@@ -297,34 +242,14 @@ function showResult(data) {
     let analysis = data.analysis;
 
     if (typeof analysis === "string")
-
         analysis = JSON.parse(analysis);
 
-    document.getElementById("score").innerText =
-
-        "Score: " + analysis.total + " / 10";
-
-    const verdictBox = document.getElementById("verdict");
-
-    verdictBox.innerText =
-
-        "Verdict: " + analysis.verdict;
-
-    verdictBox.style.color =
-
-        analysis.verdict === "SCALE"
-
-            ? "lime"
-
-            : analysis.verdict === "TEST"
-
-            ? "orange"
-
-            : "red";
-
-    document.getElementById("reason").innerText =
-
-        "Reason: " + analysis.reason;
+    result.innerText =
+        "Score: " + analysis.total +
+        " / 10 | Verdict: " +
+        analysis.verdict +
+        " | Reason: " +
+        analysis.reason;
 
 }
 
