fix broken input tag

--- a/static/index.html
+++ b/static/index.html
@@ -112,10 +112,8 @@
   <h1>🚀 Product Sniper</h1>
   <p>Paste a product link and analyze it.</p>
 
-  <input
-    
 <input
-id="productLink"
+id="link"
 type="text"
 placeholder="Paste product link here"
 >
